--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -54,6 +54,10 @@ http {
         server chat:3010;
     }
 
+    upstream transactions_service {
+        server transactions:3005;
+    }
+
     # Servidor principal
     server {
         listen 80;
@@ -215,10 +219,31 @@ http {
             proxy_read_timeout 90s;
         }
 
+        # Transactions Service - Webhook endpoint (sin rate limit para Stripe)
+        location /api/transactions/webhook/stripe {
+            proxy_pass http://transactions_service/webhook/stripe;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Transactions Service - Otras rutas (rate limit general)
+        location /api/transactions/ {
+            limit_req zone=general_limit burst=20 nodelay;
+            limit_req_status 429;
+
+            proxy_pass http://transactions_service/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Redirección raíz (sin rate limit)
         location / {
             default_type application/json;
-            return 200 '{"message":"LexIA 2.0 API Gateway","version":"1.0.0","endpoints":["/api/auth","/api/olap","/api/clustering","/api/nlp","/api/rag","/api/chat"],"rateLimits":{"login":"5 req/min","register":"3 req/min","chat":"20 msg/min","general":"10 req/s"}}';
+            return 200 '{"message":"LexIA 2.0 API Gateway","version":"1.0.0","endpoints":["/api/auth","/api/olap","/api/clustering","/api/nlp","/api/rag","/api/chat","/api/transactions"],"rateLimits":{"login":"5 req/min","register":"3 req/min","chat":"20 msg/min","general":"10 req/s"}}';
         }
     }
 }
