--- a/microservices/auth/package.json
+++ b/microservices/auth/package.json
@@ -14,7 +14,16 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "bcryptjs": "^2.4.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "pg": "^8.11.3",
+    "express-rate-limit": "^7.1.5",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "speakeasy": "^2.0.0",
+    "qrcode": "^1.5.3",
+    "nodemailer": "^6.9.7",
+    "express-validator": "^7.0.1",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
@@ -22,6 +31,12 @@
     "@types/node": "^20.8.9",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/pg": "^8.10.9",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
+    "@types/speakeasy": "^2.0.10",
+    "@types/qrcode": "^1.5.5",
+    "@types/nodemailer": "^6.4.14",
     "typescript": "^5.2.2",
     "ts-node-dev": "^2.0.0"
   }
