feat: Update backend services and add integration guides
- Add comprehensive integration guides (FRONTEND, MOBILE_APP, GMAIL_SMTP, GOOGLE_OAUTH)
- Update auth service with enhanced OAuth controller and routes
- Improve transaction service with better error handling and models
- Add geo-assistance service Docker configuration
- Clean up deprecated microservicio_transacciones (Python version)
- Update database migrations for transactions table
- Update nginx configuration for new services
- Replace sensitive credentials with placeholders in docker-compose.yml
- Exclude FromIntegrador folder from version control (separate Flutter repo)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Claude AI
 .claude/
 
+# FromIntegrador folder (Flutter app - separate repository)
+FromIntegrador/
+
 # Dependencies
 node_modules/
 */node_modules/
