--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -58,6 +58,10 @@ http {
         server transactions:3005;
     }
 
+    upstream geo_assistance_service {
+        server geo-assistance:3006;
+    }
+
     # Servidor principal
     server {
         listen 80;
@@ -240,10 +244,22 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Geo-Assistance Service (rate limit general)
+        location /api/geo/ {
+            limit_req zone=general_limit burst=20 nodelay;
+            limit_req_status 429;
+
+            proxy_pass http://geo_assistance_service/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # Redirección raíz (sin rate limit)
         location / {
             default_type application/json;
-            return 200 '{"message":"LexIA 2.0 API Gateway","version":"1.0.0","endpoints":["/api/auth","/api/olap","/api/clustering","/api/nlp","/api/rag","/api/chat","/api/transactions"],"rateLimits":{"login":"5 req/min","register":"3 req/min","chat":"20 msg/min","general":"10 req/s"}}';
+            return 200 '{"message":"LexIA 2.0 API Gateway","version":"1.0.0","endpoints":["/api/auth","/api/olap","/api/clustering","/api/nlp","/api/rag","/api/chat","/api/transactions","/api/geo"],"rateLimits":{"login":"5 req/min","register":"3 req/min","chat":"20 msg/min","general":"10 req/s"}}';
         }
     }
 }
