--- a/microservices/auth/package.json
+++ b/microservices/auth/package.json
@@ -19,6 +19,7 @@
     "express-rate-limit": "^7.1.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "google-auth-library": "^9.0.0",
     "speakeasy": "^2.0.0",
     "qrcode": "^1.5.3",
     "nodemailer": "^6.9.7",
