--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,8 +20,8 @@ http {
     # Zona para rate limiting general (10 req/s por IP)
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=10r/s;
 
-    # Zona para endpoints sensibles de auth (3 req/min por IP)
-    limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=3r/m;
+    # Zona para endpoints sensibles de auth (8 req/min por IP)
+    limit_req_zone $binary_remote_addr zone=auth_limit:10m rate=8r/m;
 
     # Zona para login específicamente (5 intentos en 1 min por IP)
     limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
@@ -67,11 +67,20 @@ http {
         listen 80;
         server_name localhost;
 
-        # CORS Headers
+        # CORS Headers - Permitir TODOS los orígenes
         add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept,Origin' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Max-Age' '1728000' always;
+
+        # Respuesta JSON para 429 Too Many Requests
+        error_page 429 = @rate_limited_json;
+        location @rate_limited_json {
+            default_type application/json;
+            return 429 '{"error":"Too Many Requests","code":429,"message":"Demasiadas solicitudes. Espera unos segundos e inténtalo de nuevo."}';
+        }
 
         # Health check del API Gateway (sin rate limit)
         location /health {
@@ -97,10 +106,11 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Auth Service - Register (rate limit moderado)
+        # Auth Service - Register (rate limit moderado, permite correcciones rápidas)
         location /api/auth/register {
-            # Límite: 3 registros por minuto
-            limit_req zone=auth_limit burst=1 nodelay;
+            # Límite: hasta 8 registros por minuto, con burst de 4
+            # Se omite nodelay para encolar ligeramente y evitar 429 inmediatos
+            limit_req zone=auth_limit burst=4;
             limit_req_status 429;
 
             proxy_pass http://auth_service/register;
