--- a/package.json
+++ b/package.json
@@ -47,7 +47,19 @@
   "author": "LexIA Team",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "@types/pg": "^8.15.6",
+    "@types/uuid": "^10.0.0",
+    "axios": "^1.13.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "pg": "^8.16.3",
+    "uuid": "^13.0.0"
   }
 }
