--- a/scripts/package.json
+++ b/scripts/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "process-pdfs": "node process-pdf-laws.js",
     "process-pdfs:sql": "node process-pdf-laws.js --sql",
-    "health-check": "node health-check.js"
+    "health-check": "node health-check.js",
+    "train": "node train-lexia.js",
+    "train:lexia": "node train-lexia.js",
+    "train:masivo": "node train-lexia-masivo.js",
+    "train:30k": "node train-lexia-masivo.js"
   },
   "dependencies": {
     "pdf-parse": "^1.1.1",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.0"
