feat: Agente Interrogador mejorado con extractores inteligentes
- Nuevo ConversationStateMachine.ts con máquina de estados para interrogar usuarios
- Extractores mejorados para entender lenguaje natural mexicano
- Extractor siNo entiende: 'solo advertencia', 'me pidió dinero', etc.
- Extractor tipo_infraccion detecta: banqueta, estacionamiento, semáforo, etc.
- OllamaIntentInterpreter para interpretar respuestas ambiguas
- SlangNormalizer para normalizar slang mexicano
- Integración OLAP para analytics de consultas
- Dataset de entrenamiento 30k ejemplos Chiapas
- Tests de slang y respuestas ambiguas

--- a/package.json
+++ b/package.json
@@ -53,12 +53,15 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "@types/natural": "^5.1.5",
     "@types/pg": "^8.15.6",
     "@types/uuid": "^10.0.0",
     "axios": "^1.13.2",
+    "compromise": "^14.14.4",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "natural": "^8.1.0",
     "pg": "^8.16.3",
     "uuid": "^13.0.0"
   }
