--- a/microservices/IA/docker-compose.ollama.yml
+++ b/microservices/IA/docker-compose.ollama.yml
@@ -4,25 +4,25 @@
 version: '3.8'
 
 services:
-  # Servicio Ollama (Motor LLM)
-  ollama:
-    image: ollama/ollama:latest
-    container_name: lexia-ollama
-    ports:
-      - "11434:11434"
-    volumes:
-      - ollama_data:/root/.ollama
-    environment:
-      - OLLAMA_HOST=0.0.0.0
-    restart: unless-stopped
-    networks:
-      - lexia-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
+  # Servicio Ollama (Motor LLM) - COMENTADO: Usando instalación local
+  # ollama:
+  #   image: ollama/ollama:latest
+  #   container_name: lexia-ollama
+  #   ports:
+  #     - "11434:11434"
+  #   volumes:
+  #     - ollama_data:/root/.ollama
+  #   environment:
+  #     - OLLAMA_HOST=0.0.0.0
+  #   restart: unless-stopped
+  #   networks:
+  #     - lexia-network
+  #   healthcheck:
+  #     test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 3
+  #     start_period: 40s
 
   # Servicio Preprocessor (Normalización)
   ollama-preprocessor:
@@ -34,10 +34,10 @@ services:
       - "3007:3007"
     environment:
       - PORT=3007
-      - OLLAMA_URL=http://ollama:11434
+      - OLLAMA_URL=http://host.docker.internal:11434
       - OLLAMA_MODEL=llama3.2:1b
-    depends_on:
-      - ollama
+    # depends_on:
+    #   - ollama
     restart: unless-stopped
     networks:
       - lexia-network
